first complete version of the paper

--- a/tex/semiar_chatgpt.tex
+++ b/tex/semiar_chatgpt.tex
@@ -35,7 +35,7 @@
 \thesisType{Seminararbeit}
 \thesisTitle{Limitationen von ChatGPT beim Generieren von Programmiercode }
 \submitDate{March 15, 2024}
-\editingTime{October 30, 2024 - March 15, 2024}
+\editingTime{30. Oktober 2023--15. März 2024}
 
 % Supervisor
 \supervisor{Tano Müller}
@@ -92,7 +92,7 @@
     % -------------------------------------------------------------------------------
     % Abstract in English and German
     \pagenumbering{Roman}  % I, II, III..
-    \input{chapters/abstract}
+    %\input{chapters/abstract}
 
     % Table of contents
     \tableofcontents
@@ -106,6 +106,10 @@
     \input{chapters/introduction}
     \input{chapters/methods}
     \input{chapters/auffaelligkeiten}
+    \input{chapters/auswertung}
+    \input{chapters/limits}
+    \input{chapters/zusammenfassung}
+    \input{chapters/quellen}
 
     % -------------------------------------------------------------------------------
     % Appendix and Glossary
