--- a/tex/settings+/style/code.tex
+++ b/tex/settings+/style/code.tex
@@ -1,9 +1,9 @@
-% Change title for list of listings
+\usepackage{color}% Change title for list of listings
 \renewcommand\lstlistlistingname{\listoflistingstitle{}}
 
 % Code highlighting for C++, you can also add others if needed
 \lstset{
-    language=C++,
+    language=Python,
     numbers=left,
     columns=fullflexible,
     aboveskip=5pt,
