--- a/tex/settings+/style/code.tex
+++ b/tex/settings+/style/code.tex
@@ -8,7 +8,7 @@
     columns=fullflexible,
     aboveskip=5pt,
     belowskip=10pt,
-    basicstyle=\small\ttfamily,
+    basicstyle=\ttfamily\small,
     backgroundcolor=\color{black!5},
     commentstyle=\color{darkgreen},
     keywordstyle=\color{blue},
